[project]
name = "hyde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ollama>=0.6.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "typer>=0.26.7",
    "wikipedia-api>=0.15.0",
]
